syntax.txt
<program> → function id ( ) <block> end

<block> → <statement> | <statement> <block>

<statement> → <if_statement> | <assignment_statement> | <while_statement> |
<print_statement> | <repeat_statement>

<if_statement> → if <boolean_expression> then <block> else <block> end

<while_statement> → while <boolean_expression> do <block> end

<assignment_statement> -> id <ASSIGN> <arithmetic_expression>

<repeat_statement> -> repeat <block> until <boolean_expression>

<print_statement> → print ( <arithmetic_expression> )

<boolean_expression> → <relative_op> <arithmetic_expression> <arithmetic_expression>

<relative_op> → LESSEQ | LESSTHAN | GREATEQ | GREATTHAN | EQUALS | NOTEQ

<arithmetic_expression> → <IDENT> | <INT> | <arithmetic_op> <arithmetic_expression>
<arithmetic_expression>

<arithmetic_op> → ADD | SUB | MULT | DIV
